# yuntu

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py  system_deps_ubuntu.sh  tox.ini
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/development/: caches.rst  index.rst  media.rst  plugins.rst
docs/source/usage/: installation.rst
name/persist/: apply_indices.parquet
tests/: collection_audio.py  test_audio.py  test_media.py
tests/audio/: test_audio.py
tests/core/media/: test_media.py  test_numpy.py  test_readers.py  test_storages.py
tests/core/utils/: test_cache.py  test_lazy.py  test_plugins.py
tests/fixtures/: audio.py
tutorials/: Annotations.ipynb  Audio.ipynb  Datastores.ipynb  Frequency Media.ipynb  Geometry.ipynb  Labels.ipynb  Masks.ipynb  Time Media.ipynb  Untitled.ipynb  formated_labelling_structure.json
yuntu/: __init__.py  logging.py  utils.py
yuntu/analytics/ecology/: basic.py
yuntu/audio/: __init__.py  audio.py  info.py  plotting.py  readers.py
yuntu/collection/: base.py  irekua.py  methods.py  server.py  utils.py
yuntu/collection/mixins/: provider.py
yuntu/core/: axis.py  media.py  plotters.py  windows.py
yuntu/core/annotation/: annotated_object.py  annotation.py  base.py  labels.py
yuntu/core/atlas/: base.py  geometry.py  utils.py
yuntu/core/audio/: audio.py  audio_features.py  base.py  methods.py  utils.py
yuntu/core/database/: annotations.py  base.py  datastores.py  images.py  recordings.py
yuntu/core/db/: methods.py
yuntu/core/geometry/: __init__.py  base.py  bbox.py  chart.py  geometry_collections.py  intervals.py  lines.py  linestrings.py  mixins.py  points.py  polygons.py  utils.py  weak.py
yuntu/core/image/: image.py  image_features.py  utils.py
yuntu/core/media/: atemporal.py  base.py  frequency.py  grided.py  histogram.py  info.py  loaders.py  masked.py  mixins.py  readers.py  (+4 more)
yuntu/dataframe/: activity.py  annotation.py  audio.py  base.py  image.py  soundscape.py
yuntu/datastore/: __init__.py  audiomoth.py  base.py  copy.py  irekua.py  postgresql.py
yuntu/datastores/: base.py
yuntu/soundscape/: __init__.py  base.py  dataframe.py  hashers.py  indices.py  operations.py  pipelines.py  probes.py  transitions.py  utils.py
yuntu/tests/: collection_audio.py
(+91 files in other folders)
