[tool.black]
line_length=79

[tool.poetry]
name = "yuntu"
version = "0.1.0"
description = "Tool for PAM data management"
authors = ["mbsantiago <santiago.mbal@gmail.com>", "erobredo <erobredo@conabio.gob.mx>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
python-language-server = {extras = ["all"], version = "^0.36.2"}
pyls-mypy = "^0.1.8"
mypy = "^0.812"
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
