[tool.black]
line_length=79

[tool.poetry]
name = "yuntu"
version = "0.1.0"
description = "Tool for PAM data management"
authors = ["mbsantiago <santiago.mbal@gmail.com>", "erobredo <erobredo@conabio.gob.mx>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
numpy = "^1.20.2"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]
python-language-server = {extras = ["all"], version = "^0.36.2"}
pyls-mypy = "^0.1.8"
mypy = "^0.812"
black = "^20.8b1"
pytest = "^6.2.2"
Sphinx = "^3.5.3"
coverage = {extras = ["toml"], version = "^5.5"}
sphinx-copybutton = "^0.3.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-material = "^0.0.32"
sphinx-autoapi = "^1.7.0"
tox = "^3.23.0"
future = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
include = ["yuntu/*"]
